# internal/common/dto/response.go
@@ -11,3 +11,24 @@ type ErrorResponse struct {
 	Message string `json:"message"`
 	Error   string `json:"error,omitempty"`
 }
+
+type PaginationQuery struct {
+	Page   int    `form:"page,default=1"`
+	Limit  int    `form:"limit,default=10"`
+	Sort   string `form:"sort"`
+	Search string `form:"search"`
+}
+
+type Meta struct {
+	Total      int64 `json:"total"`
+	Page       int   `json:"page"`
+	Limit      int   `json:"limit"`
+	TotalPages int   `json:"total_pages"`
+}
+
+type PaginatedResponse[T any] struct {
+	Code    int    `json:"code"`
+	Message string `json:"message"`
+	Data    T      `json:"data"`
+	Meta    Meta   `json:"meta"`
+}
